Fixed status label close button spacing

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -421,6 +421,7 @@ ul.post-meta, ul.post-links {
     cursor: pointer;
     font-size: 20px;
     margin-left: 6px; /* Space from the status label text */
+    padding: 2px 0 3px 6px;
   }
 }
 
